<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL" Id="{9d1a4c32-a37d-49cd-99b3-f29540f7504d}">
    <Declaration><![CDATA[
{attribute 'qualified_only'}
VAR_GLOBAL
END_VAR
VAR_GLOBAL CONSTANT
	Reconnect_time 	: TIME := T#1S;
	ListenTime		: TIME := T#1S;
	AcceptTime		: TIME := T#1S;
	RecvTime 		: TIME := T#1S;	
	MaxDataLen		: UDINT := 3500;
	QueLen			: USINT := 4;
END_VAR
VAR_GLOBAL
	InitPar 		: st_InitParameter;
	// put new to tail and get data from heand  circularly
	fbRecvDataQue   : FB_RecvDataQue;
	fbSendDataQue 	: FB_SendDataQue;
	
	//NEW
	TestMotor : ARRAY [0..19] OF AXIS_REF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>